# slidewarp

./: .gitignore  CLAUDE.md  Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
doc/tickets/: 0001-document-rust-detection-method.md  0002-curl-install-oneliner.md  0003-update-tech-stack-status.md  0004-musl-only-mimalloc.md  0005-windows-support.md  0006-aarch64-linux-release.md  CLAUDE.md
doc/tickets/resolved/: 0001-document-rust-detection-method.md  0002-curl-install-oneliner.md  0003-update-tech-stack-status.md  0004-musl-only-mimalloc.md
docs/: detection-rust.md  tech-stack.md
input-samples/: README.md
python/: README.md  pyproject.toml
python/slidewarp/: __init__.py  cli.py  detect.py  enhance.py  geometry.py  io_utils.py  ml.py  pipeline.py  report.py  warp.py
scripts/: install.sh  test-install.sh
src/: detect.rs  enhance.rs  geometry.rs  main.rs  report.rs  warp.rs
