[package]
name = "slidewarp"
version = "0.1.0"
edition = "2021"
description = "学会撮影スライド写真からスライド領域を検出し、トリミング・台形補正・シャープ化する CLI（純Rust）"
license = "MIT"
repository = "https://github.com/hayamiz/slidewarp"
readme = "README.md"
keywords = ["slide", "perspective", "rectify", "image", "cli"]
categories = ["command-line-utilities", "multimedia::images"]

[[bin]]
name = "slidewarp"
path = "src/main.rs"

[dependencies]
image = "0.25"
imageproc = "0.25"
rayon = "1"
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
walkdir = "2"
mimalloc = "0.1"

[profile.release]
opt-level = 3
lto = true
