[project]
name = "slidewarp"
version = "0.1.0"
description = "学会撮影スライド写真の一括処理CLI（検出・台形補正・シャープ化・任意の露出/色補正）"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "opencv-python-headless>=4.9",
    "numpy>=1.26",
    "onnxruntime>=1.17",
]

[project.optional-dependencies]
# 人物セグメンテーション(--remove-people)。torch は重いので任意依存。
ml = [
    "torch>=2.2",
    "torchvision>=0.17",
]

[project.scripts]
slidewarp = "slidewarp.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["slidewarp"]
